--- a/AOC/Y2019/Day12.cls
+++ b/AOC/Y2019/Day12.cls
@@ -5,14 +5,14 @@ Parameter Day = 12;
 
 Parameter Year = 2019;
 
-ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part1(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day12).GetInput(..#Day,.pInput)
 	
 	set res=""
 	set pos=$o(pInput(""),1,l)
 	while pos'="" {
-		do ##class(AOC.Y2019).ParseString(l,",",.x,.y,.z)
+		do ##class(AOC.Y2019.Day12).ParseString(l,",",.x,.y,.z)
 		set x=$piece(x,"=",2)
 		set y=$piece(y,"=",2)
 		set z=$piece($e(z,1,*-1),"=",2)
@@ -61,14 +61,14 @@ ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 	quit res
 }
 
-ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part2(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day12).GetInput(..#Day,.pInput)
 	
 	set res=""
 	set pos=$o(pInput(""),1,l)
 	while pos'="" {
-		do ##class(AOC.Y2019).ParseString(l,",",.x,.y,.z)
+		do ##class(AOC.Y2019.Day12).ParseString(l,",",.x,.y,.z)
 		set x=$piece(x,"=",2)
 		set y=$piece(y,"=",2)
 		set z=$piece($e(z,1,*-1),"=",2)
@@ -140,7 +140,7 @@ ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 			zw:pDebug zRepeat
 		}
 		if xRepeat&&yRepeat&&zRepeat {
-			set res=##class(AOC.Y2019).LCM(xRepeat,yRepeat,zRepeat)
+			set res=##class(AOC.Y2019.Day12).LCM(xRepeat,yRepeat,zRepeat)
 			set done=1
 		}
 	}
@@ -148,7 +148,7 @@ ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 	quit res
 }
 
-ClassMethod Run(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Run(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Set tPart1=##class(AOC.Y2019.Day12).Part1(pInput,pDebug,pWithUI)
 	Set tPart2=##class(AOC.Y2019.Day12).Part2(pInput,pDebug,pWithUI)
