--- a/AOC/Y2019/Day17.cls
+++ b/AOC/Y2019/Day17.cls
@@ -5,7 +5,7 @@ Parameter Day = 17;
 
 Parameter Year = 2019;
 
-ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part1(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day17).GetInput(..#Day,.pInput)
 	
@@ -134,12 +134,12 @@ ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 		}
 	}
 	
-	do:pWithUI ##class(AOC.Y2019).Print2DArray(.map)
+	do:pWithUI ##class(AOC.Y2019.Day17).Print2DArray(.map)
 	
 	quit res
 }
 
-ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part2(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day17).GetInput(..#Day,.pInput)
 	
@@ -417,12 +417,12 @@ ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 		}
 	}
 	
-	do:pWithUI ##class(AOC.Y2019).Print2DArray(.map)
+	do:pWithUI ##class(AOC.Y2019.Day17).Print2DArray(.map)
 	
 	quit res
 }
 
-ClassMethod Run(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Run(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Set tPart1=##class(AOC.Y2019.Day17).Part1(pInput,pDebug,pWithUI)
 	Set tPart2=##class(AOC.Y2019.Day17).Part2(pInput,pDebug,pWithUI)
