--- a/AOC/Y2019/Day19.cls
+++ b/AOC/Y2019/Day19.cls
@@ -5,7 +5,7 @@ Parameter Day = 19;
 
 Parameter Year = 2019;
 
-ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part1(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day19).GetInput(..#Day,.pInput)
 	
@@ -124,11 +124,11 @@ ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 		}
 	}
 	
-	do:pDebug ##class(AOC.Y2019).Print2DArray(.map)
+	do:pDebug ##class(AOC.Y2019.Day19).Print2DArray(.map)
 	quit res
 }
 
-ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part2(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day19).GetInput(..#Day,.pInput)
 	
@@ -336,7 +336,7 @@ ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 	quit res
 }
 
-ClassMethod Run(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Run(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Set tPart1=##class(AOC.Y2019.Day19).Part1(pInput,pDebug,pWithUI)
 	Set tPart2=##class(AOC.Y2019.Day19).Part2(pInput,pDebug,pWithUI)
