--- a/AOC/Y2019/Day8.cls
+++ b/AOC/Y2019/Day8.cls
@@ -5,7 +5,7 @@ Parameter Day = 8;
 
 Parameter Year = 2019;
 
-ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part1(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day8).GetInput(..#Day,.pInput)
 	
@@ -42,7 +42,7 @@ ClassMethod Part1(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 	quit res
 }
 
-ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Part2(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Do ##class(AOC.Y2019.Day8).GetInput(..#Day,.pInput)
 	
@@ -79,12 +79,12 @@ ClassMethod Part2(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
 		}
 	}
 	
-	do ##class(AOC.Y2019).Print2DArray(.res,1)
+	do ##class(AOC.Y2019.Day8).Print2DArray(.res,1)
 	
 	quit ""
 }
 
-ClassMethod Run(pInput = "",  pDebug = 0,  pWithUI = 0) As %String
+ClassMethod Run(pInput = "", pDebug = 0, pWithUI = 0) As %String
 {
 	Set tPart1=##class(AOC.Y2019.Day8).Part1(pInput,pDebug,pWithUI)
 	Set tPart2=##class(AOC.Y2019.Day8).Part2(pInput,pDebug,pWithUI)
