ParseString sould fill last pVariables element
If there are more pieces to the list than pVariables passed in,
fill the final pVariables item with the rest of the string

--- a/AOC/Base.cls
+++ b/AOC/Base.cls
@@ -26,8 +26,12 @@ ClassMethod ParseString(pString As %String = "", pDelimiter As %String = "", ByR
 	If ((pDelimiter="") || (pString="")) {
 		Set pVariables(1)=pString
 	} Else {
-		For i=1:1:$Length(pString,pDelimiter) {
-			Set pVariables(i)=$Piece(pString,pDelimiter,i)
+		For i=1:1:pVariables {
+			If i=pVariables {
+				Set pVariables(i)=$Piece(pString,pDelimiter,i,*)
+			} Else {
+				Set pVariables(i)=$Piece(pString,pDelimiter,i)
+			}
 		}
 	}
 }
